--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,19 @@
-spring: 
-  application: 
-    name: gerencestacionamento
-  datasource:
-    url: jdbc:h2:mem:user
-    username: sa
-    password: 1234
-  jpa: 
-    database-platform: org.hibernate.dialect.H2Dialect  
-  h2: 
-    console: 
-      enabled: true
+#spring:
+#  application:
+#    name: gerencestacionamento
+#  datasource:
+#    url: jdbc:h2:mem:gerencestacionamento
+#    username: sa
+#    password: 123
+#    driver-class-name: org.h2.Driver
+#  jpa:
+#    database-platform: org.hibernate.dialect.H2Dialect
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: update
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
+#      settings:
+#        trace: true
